--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<head>
 		<title>Yanchen Wang Personal Page</title>
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=2" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
@@ -19,7 +19,7 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon major fa-cloud"></span>
+					<span class="images/desert.jpg"></span>
 					<h1>Hi, I'm <strong>Photon</strong>, another fine<br />
 					little freebie from <a href="http://html5up.net">HTML5 UP</a>.</h1>
 					<p>Accumsan feugiat mi commodo erat lorem ipsum, sed magna<br />
