--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 	</head>
 	<body>
 
+        <!-- Nav -->
+			<nav id="nav">
+				<ul class="container">
+					<li><a href="#top">Top</a></li>
+					<li><a href="#work">Work</a></li>
+					<li><a href="#portfolio">Portfolio</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
+
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
