--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 		<!-- Home -->
 			<div class="wrapper style1 first">
-				<article class="container" id="top">
+				<article class="container" id="home">
 					<div class="row">
 						<div class="4u 12u(mobile)">
 							<span class="image fit"><img src="images/pic00.jpg" alt="" /></span>
