--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<hr />
-								<h3>Find me on ...</h3>
+								<h3>Find me on</h3>
 								<ul class="social">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -173,7 +172,6 @@
 									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
 									-->
 								</ul>
-								<hr />
 							</div>
 						</div>
 					</div>
