--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<ul class="container">
 					<li><a href="#home">Home</a></li>
 					<li><a href="#education">Education</a></li>
+					<li><a href="#work">Work</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -35,7 +36,7 @@
 						</div>
 						<div class="8u 12u(mobile)">
 							<header>
-								<h1>Hi. I'm <strong>Jane Doe</strong>.</h1>
+								<h1>Hi. I'm <strong>Yanchen Wang</strong>.</h1>
 							</header>
 							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://n33.co">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
 							<a href="#work" class="button big scrolly">Learn about what I do</a>
