--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 			<nav id="nav">
 				<ul class="container">
 					<li><a href="#home">Home</a></li>
-					<li><a href="#education">Education</a></li>
 					<li><a href="#work">Work</a></li>
+					<li><a href="#education">Education</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -45,7 +45,7 @@
 				</article>
 			</div>
 
-		<!-- Work -->
+        <!-- Work -->
 			<div class="wrapper style2">
 				<article id="work">
 					<header>
@@ -83,6 +83,8 @@
 					</footer>
 				</article>
 			</div>
+
+		<!-- Education -->
 
 		<!-- Portfolio -->
 			<div class="wrapper style3">
