--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
 				</article>
 			</div>
 
-		<!-- Portfolio -->
+		<!-- Education -->
 			<div class="wrapper style3">
-				<article id="portfolio">
+				<article id="education">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
