--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 			</div>
 
 		<!-- Education -->
-		    <div class="wrapper style2">
-				<article id="work">
+		<div class="wrapper style2">
+				<article id="education">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
 						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
@@ -123,9 +123,9 @@
 				</article>
 			</div>
 
-		<!-- Education -->
+		<!-- Portfolio -->
 			<div class="wrapper style3">
-				<article id="education">
+				<article id="portfolio">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
 						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat lorem ipsum dolore.</p>
