--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					<div>
 						<div class="row">
 							<div class="12u">
-								<h3>Find me on</h3>
+								<h3>Find me on
 								<ul class="social">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -212,6 +212,7 @@
 									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
 									-->
 								</ul>
+								</h3>
 							</div>
 						</div>
 					</div>
