--- a/index.html
+++ b/index.html
@@ -187,11 +187,11 @@
 
 		<!-- Contact -->
 			<div class="wrapper style4">
-				<article id="contact" class="container 50%">
+				<article id="contact" class="container 75%">
 					<div>
 						<div class="row">
 							<div class="12u">
-								<h3>Find me on
+								<h3>Find me on</h3>
 								<ul class="social">
 									<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
@@ -212,7 +212,6 @@
 									<li><a href="#" class="icon fa-vimeo"><span>Vimeo</span></a></li>
 									-->
 								</ul>
-								</h3>
 							</div>
 						</div>
 					</div>
