Refactor main page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 
 <html>
 	<head>
-		<title>Yanchen Wang</title>
+		<title>Yanchen Wang | Portfolio</title>
 		<meta charset="utf-8" />
-		<meta name="Yanchen Personal Page" content="text" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="description" content="Yanchen Wang - Personal Portfolio" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
@@ -26,61 +27,56 @@
 		<!--Home-->
 			<div class="wrapper style1">
 				<article class="container" id="home">
-					<div class="row">
-						<span class="image left"><img src="images/selfie.jpg" alt="" width="300" height="300"></span>
-					</div>
-					<div>
-						<h1>Yanchen Wang</h1>
-						<p>Hi, I am <strong>Yanchen</strong>. Welcome to my personal page!</p>
-					</div>
+					<span class="image profile-thumb" onclick="this.classList.toggle('enlarged')">
+						<img src="assets/css/images/selfie.jpg" alt="Yanchen Wang">
+					</span>
+					<h1>Yanchen Wang</h1>
+					<p>Hi, I am <strong>Yanchen</strong>. Welcome to my personal page!</p>
 				</article>
 			</div>
 		
-		<div>
-			<article id="education">
-				<header>
-					<h2>Education</h2>
-				<p></p>
-				</header>
-				<div class="container">
-					<div class="row">
-						<section class="box">
-							<span class="image"><img src="images/Wuhan_University_Logo.png" alt="" width="250" height="250"></span>
-							<h3><font size="5">Undergraduate</font><br><strong><font size="5">Wuhan<br>University</font></strong></h3>
-						</section>
-						<section class="box">
-							<span class="image"><img src="images/Sjtu-logo-standard-red.png" alt="" width="250" height="250"></span>
-							<h3><font size="5">Summer School</font><br><strong><font size="5">Shanghai Jiaotong University</font></strong></h3>
-						</section>
-						<section class="box">
-							<span class="image"><img src="images/NU.png" alt="" width="250" height="250"></span>
-							<h3><font size="5">Graduate</font><br><strong><font size="5">Northeastern University</font></strong></h3>
-						</section>
-					</div>	
-				</div>
-			</article>
-		</div>
+		<article id="education">
+			<header>
+				<h2>Education</h2>
+			</header>
+			<div class="container">
+				<div class="row">
+					<section class="box">
+						<span class="image"><img src="assets/css/images/education/NU.png" alt="Wuhan University" width="200" height="200"></span>
+						<h3>Undergraduate<br><strong>Wuhan<br>University</strong></h3>
+					</section>
+					<section class="box">
+						<span class="image"><img src="assets/css/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
+						<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
+					</section>
+					<section class="box">
+						<span class="image"><img src="assets/css/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
+						<h3>Graduate<br><strong>Northeastern University</strong></h3>
+					</section>
+				</div>	
+			</div>
+		</article>
 
-		<div>
-			<article class="container" id="work">
-				<h2>Work</h2>
-				<p></p>
-			</article>
-		</div>
+		<article id="work">
+			<h2>Work</h2>
+			<div class="container">
+				<p>Work experience content coming soon...</p>
+			</div>
+		</article>
 		
-		<div>
-			<article class="container" id="activity">
-				<h2>Activity</h2>
-				<p></p>
-			</article>
-		</div>
+		<article id="activity">
+			<h2>Activity</h2>
+			<div class="container">
+				<p>Activities content coming soon...</p>
+			</div>
+		</article>
 
-		<div>
-			<article class="container" id="contact">
-				<h2>Contact</h2>
-		        <p></p>
-			</article>
-		</div>
+		<article id="contact">
+			<h2>Contact</h2>
+			<div class="container">
+				<p>Contact information coming soon...</p>
+			</div>
+		</article>
 		
 
 	</body>
