Update profile pic

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<div class="wrapper style1">
 				<article class="container" id="home">
 					<span class="image profile-thumb" onclick="this.classList.toggle('enlarged')">
-						<img src="assets/css/images/selfie.jpg" alt="Yanchen Wang">
+						<img src="assets/css/images/selfie3d.png" alt="Yanchen Wang">
 					</span>
 					<h1>Yanchen Wang</h1>
 					<p>Hi, I am <strong>Yanchen</strong>. Welcome to my personal page!</p>
