--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<div class="wrapper style1">
 				<article class="container" id="home">
 					<span class="image profile-thumb" onclick="this.classList.toggle('enlarged')">
-						<img src="assets/css/images/selfie3d.png" alt="Yanchen Wang">
+						<img src="assets/images/selfie3d.png" alt="Yanchen Wang">
 					</span>
 					<h1>Yanchen Wang</h1>
 					<p>Hi, I am <strong>Yanchen</strong>. Welcome to my personal page!</p>
@@ -48,15 +48,15 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<span class="image"><img src="assets/css/images/education/NU.png" alt="Wuhan University" width="200" height="200"></span>
+						<span class="image"><img src="assets/images/education/NU.png" alt="Wuhan University" width="200" height="200"></span>
 						<h3>Undergraduate<br><strong>Wuhan<br>University</strong></h3>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/css/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
+						<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
 						<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/css/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
+						<span class="image"><img src="assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
 						<h3>Graduate<br><strong>Northeastern University</strong></h3>
 					</section>
 				</div>	
