--- a/activity/landscape.html
+++ b/activity/landscape.html
@@ -45,102 +45,58 @@
 				<div class="gallery-container">
 					<div class="gallery-grid">
 						<!-- Photo items - replace src with thumbnail path and data-full with 4K image path -->
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2160/90caf9/1a237e?text=4K+Landscape+1" data-title="Mountain Vista" data-info="Iceland • 2024">
-							<img src="https://via.placeholder.com/800x600/90caf9/1a237e?text=Landscape+1" alt="Landscape 1">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC_0318_D-1.jpg" data-title="Seattle Sunset - Space Needle" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/DSC_0318_D-1.jpg" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Mountain Vista</h3>
+									<h3>Seattle Sunset - Space Needle</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>Iceland • 2024</p>
+									<p>Seattle • 2025</p>
 								</div>
 							</div>
 						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/2160x3840/64b5f6/1a237e?text=4K+Landscape+2" data-title="Sunset Valley" data-info="California • 2024">
-							<img src="https://via.placeholder.com/800x1200/64b5f6/1a237e?text=Landscape+2" alt="Landscape 2">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC06450.JPG" data-title="Seattle Sunset" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/DSC06450.JPG" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Sunset Valley</h3>
+									<h3>Seattle Sunset</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>California • 2024</p>
+									<p>Seattle • 2025</p>
 								</div>
 							</div>
 						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2160/bbdefb/1a237e?text=4K+Landscape+3" data-title="Ocean View" data-info="Hawaii • 2023">
-							<img src="https://via.placeholder.com/800x600/bbdefb/1a237e?text=Landscape+3" alt="Landscape 3">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC06577-1.jpg" data-title="Seattle Sunset" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/DSC06577-1.jpg" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Ocean View</h3>
+									<h3>Seattle Sunset</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>Hawaii • 2023</p>
+									<p>Seattle • 2025</p>
 								</div>
 							</div>
 						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2560/90caf9/1a237e?text=4K+Landscape+4" data-title="Forest Path" data-info="Oregon • 2024">
-							<img src="https://via.placeholder.com/800x533/90caf9/1a237e?text=Landscape+4" alt="Landscape 4">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC07808-3.jpeg" data-title="Crater Lake" data-info="Oregon • 2025">
+							<img src="../assets/images/activity/photography/DSC07808-3.jpeg" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Forest Path</h3>
+									<h3>Crater Lake</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>Oregon • 2024</p>
+									<p>Oregon • 2025</p>
 								</div>
 							</div>
 						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2160/64b5f6/1a237e?text=4K+Landscape+5" data-title="Desert Dunes" data-info="Arizona • 2023">
-							<img src="https://via.placeholder.com/800x600/64b5f6/1a237e?text=Landscape+5" alt="Landscape 5">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC07356-1.jpg" data-title="Cannon Beach" data-info="Oregon • 2025">
+							<img src="../assets/images/activity/photography/DSC07356-1.jpg" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Desert Dunes</h3>
+									<h3>Cannon Beach</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>Arizona • 2023</p>
-								</div>
-							</div>
-						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/2160x3840/bbdefb/1a237e?text=4K+Landscape+6" data-title="Waterfall" data-info="Norway • 2024">
-							<img src="https://via.placeholder.com/800x1200/bbdefb/1a237e?text=Landscape+6" alt="Landscape 6">
-							<div class="gallery-overlay">
-								<div>
-									<h3>Waterfall</h3>
-								</div>
-								<div class="gallery-stats">
-									<p>Norway • 2024</p>
-								</div>
-							</div>
-						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2160/90caf9/1a237e?text=4K+Landscape+7" data-title="Lake Reflection" data-info="Canada • 2023">
-							<img src="https://via.placeholder.com/800x600/90caf9/1a237e?text=Landscape+7" alt="Landscape 7">
-							<div class="gallery-overlay">
-								<div>
-									<h3>Lake Reflection</h3>
-								</div>
-								<div class="gallery-stats">
-									<p>Canada • 2023</p>
-								</div>
-							</div>
-						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2560/64b5f6/1a237e?text=4K+Landscape+8" data-title="Canyon View" data-info="Utah • 2024">
-							<img src="https://via.placeholder.com/800x533/64b5f6/1a237e?text=Landscape+8" alt="Landscape 8">
-							<div class="gallery-overlay">
-								<div>
-									<h3>Canyon View</h3>
-								</div>
-								<div class="gallery-stats">
-									<p>Utah • 2024</p>
-								</div>
-							</div>
-						</div>
-						<div class="gallery-item" data-full="https://via.placeholder.com/3840x2160/bbdefb/1a237e?text=4K+Landscape+9" data-title="Northern Lights" data-info="Alaska • 2023">
-							<img src="https://via.placeholder.com/800x600/bbdefb/1a237e?text=Landscape+9" alt="Landscape 9">
-							<div class="gallery-overlay">
-								<div>
-									<h3>Northern Lights</h3>
-								</div>
-								<div class="gallery-stats">
-									<p>Alaska • 2023</p>
+									<p>Oregon • 2025</p>
 								</div>
 							</div>
 						</div>
