Add photos into the gallery

--- a/activity/landscape.html
+++ b/activity/landscape.html
@@ -45,28 +45,6 @@
 				<div class="gallery-container">
 					<div class="gallery-grid">
 						<!-- Photo items - replace src with thumbnail path and data-full with 4K image path -->
-						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC_0318_D-1.jpg" data-title="Seattle Sunset - Space Needle" data-info="Seattle • 2025">
-							<img src="../assets/images/activity/photography/DSC_0318_D-1.jpg" alt="Landscape">
-							<div class="gallery-overlay">
-								<div>
-									<h3>Seattle Sunset - Space Needle</h3>
-								</div>
-								<div class="gallery-stats">
-									<p>Seattle • 2025</p>
-								</div>
-							</div>
-						</div>
-						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC06450.JPG" data-title="Seattle Sunset" data-info="Seattle • 2025">
-							<img src="../assets/images/activity/photography/DSC06450.JPG" alt="Landscape">
-							<div class="gallery-overlay">
-								<div>
-									<h3>Seattle Sunset</h3>
-								</div>
-								<div class="gallery-stats">
-									<p>Seattle • 2025</p>
-								</div>
-							</div>
-						</div>
 						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC06577-1.jpg" data-title="Seattle Sunset" data-info="Seattle • 2025">
 							<img src="../assets/images/activity/photography/DSC06577-1.jpg" alt="Landscape">
 							<div class="gallery-overlay">
@@ -78,25 +56,36 @@
 								</div>
 							</div>
 						</div>
-						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC07808-3.jpeg" data-title="Crater Lake" data-info="Oregon • 2025">
-							<img src="../assets/images/activity/photography/DSC07808-3.jpeg" alt="Landscape">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC_0295_D-1.jpg" data-title="Seattle Downtown" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/DSC_0295_D-1.jpg" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Crater Lake</h3>
+									<h3>Seattle Downtown</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>Oregon • 2025</p>
+									<p>Seattle • 2025</p>
 								</div>
 							</div>
 						</div>
-						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC07356-1.jpg" data-title="Cannon Beach" data-info="Oregon • 2025">
-							<img src="../assets/images/activity/photography/DSC07356-1.jpg" alt="Landscape">
+						<div class="gallery-item" data-full="../assets/images/activity/photography/DSC_0192-1.jpg" data-title="Seattle Sunset - Space Needle" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/DSC_0192-1.jpg" alt="Landscape">
 							<div class="gallery-overlay">
 								<div>
-									<h3>Cannon Beach</h3>
+									<h3>Seattle Sunset - Space Needle</h3>
 								</div>
 								<div class="gallery-stats">
-									<p>Oregon • 2025</p>
+									<p>Seattle • 2025</p>
+								</div>
+							</div>
+						</div>
+						<div class="gallery-item" data-full="../assets/images/activity/photography/IMG_2964-1.jpg" data-title="Seattle Rainbow" data-info="Seattle • 2025">
+							<img src="../assets/images/activity/photography/IMG_2964-1.jpg" alt="Landscape">
+							<div class="gallery-overlay">
+								<div>
+									<h3>Seattle Rainbow</h3>
+								</div>
+								<div class="gallery-stats">
+									<p>Seattle • 2025</p>
 								</div>
 							</div>
 						</div>
