Add company details

--- a/index.html
+++ b/index.html
@@ -68,13 +68,25 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
+						<div class="logo-container">
+							<img src="assets/images/work/New_Oriental.png" alt="New Oriental">
+						</div>
 						<h3><strong>New Oriental</strong></h3>
+						<p>English Teacher</p>
 					</section>
 					<section class="box">
+						<div class="logo-container">
+							<img src="assets/images/work/xcerra.jpeg" alt="Xcerra">
+						</div>
 						<h3><strong>Xcerra</strong></h3>
+						<p>Software Engineer</p>
 					</section>
 					<section class="box">
+						<div class="logo-container">
+							<img src="assets/images/work/31epF-8N9LL.png" alt="Amazon">
+						</div>
 						<h3><strong>Amazon</strong></h3>
+						<p>Software Development Engineer</p>
 					</section>
 				</div>
 			</div>
@@ -91,6 +103,9 @@
 					</section>
 					<section class="box">
 						<h3><strong>Travel</strong></h3>
+					</section>
+					<section class="box">
+						<h3><strong>Food</strong></h3>
 					</section>
 				</div>
 			</div>
