Update company logo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 					</section>
 					<section class="box">
 						<div class="logo-container">
-							<img src="assets/images/work/xcerra.jpeg" alt="Xcerra">
+							<img src="assets/images/work/xcerra.png" alt="Xcerra">
 						</div>
 						<h3><strong>Xcerra</strong></h3>
 						<p>Software Engineer</p>
