Add more content into index

--- a/index.html
+++ b/index.html
@@ -97,14 +97,17 @@
 			<div class="container">
 				<div class="row">
 					<section class="box">
+						<span class="image"><img src="assets/images/activity/camera_1423902.png" alt="Photography" width="100" height="100"></span>
 						<a href="activity/photography.html" style="text-decoration: none; color: inherit;">
 							<h3><strong>Photography</strong></h3>
 						</a>
 					</section>
 					<section class="box">
+						<span class="image"><img src="assets/images/activity/map_7997627.png" alt="Travel" width="100" height="100"></span>
 						<h3><strong>Travel</strong></h3>
 					</section>
 					<section class="box">
+						<span class="image"><img src="assets/images/activity/nabe_5746409.png" alt="Food" width="100" height="100"></span>
 						<h3><strong>Food</strong></h3>
 					</section>
 				</div>
