Add more content

--- a/activity/photography-zh.html
+++ b/activity/photography-zh.html
@@ -3,71 +3,71 @@
     Photography page by Yanchen
 -->
 
-<html>
+<html lang="zh-CN">
 	<head>
-		<title>Photography | Yanchen Wang</title>
+		<title>摄影 | 王沿辰</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Yanchen Wang - Photography Portfolio" />
+		<meta name="description" content="王沿辰 - 摄影作品集" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
 	</head>
 	<body>
 
 		<!-- Floating Buttons -->
 		<div class="floating-buttons">
-			<button class="back-to-top" id="backToTop" aria-label="Back to top">
-				<span>TOP</span>
+			<button class="back-to-top" id="backToTop" aria-label="返回顶部">
+				<span>顶部</span>
 			</button>
 			<div class="lang-switch">
-				<a href="photography.html" class="lang-btn active">EN</a>
-				<a href="photography-zh.html" class="lang-btn">CN</a>
+				<a href="photography.html" class="lang-btn">EN</a>
+				<a href="photography-zh.html" class="lang-btn active">CN</a>
 			</div>
 		</div>
 
 		<!--Nav-->
 			<nav id="nav">
 				<ul>
-					<li><a href="../index.html#home"><strong>Home</strong></a></li>
-					<li><a href="../index.html#education"><strong>Education</strong></a></li>
-					<li><a href="../index.html#work"><strong>Work</strong></a></li>
+					<li><a href="../index-zh.html#home"><strong>首页</strong></a></li>
+					<li><a href="../index-zh.html#education"><strong>教育</strong></a></li>
+					<li><a href="../index-zh.html#work"><strong>工作</strong></a></li>
 					<li class="dropdown">
-						<a href="../index.html#activity"><strong>Activity</strong></a>
+						<a href="../index-zh.html#activity"><strong>活动</strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="photography.html">Photography</a></li>
-							<li><a href="../index.html#activity">Travel</a></li>
-							<li><a href="../index.html#activity">Food</a></li>
+							<li><a href="photography-zh.html">摄影</a></li>
+							<li><a href="../index-zh.html#activity">旅行</a></li>
+							<li><a href="../index-zh.html#activity">美食</a></li>
 						</ul>
 					</li>
-					<li><a href="../index.html#contact"><strong>Contact</strong></a></li>
+					<li><a href="../index-zh.html#contact"><strong>联系</strong></a></li>
 				</ul>
 			</nav>
 
 		<!--Photography Content-->
 			<article id="home">
 				<div class="container">
-					<h1>Photography</h1>
-					<p>Welcome to my photography portfolio. Here I share my passion for capturing moments and telling stories through images.</p>
-					<p><a href="#education" style="color: #1565c0; text-decoration: none; font-weight: 600; font-size: 1.1rem;">View Gallery →</a></p>
+					<h1>摄影</h1>
+					<p>欢迎来到我的摄影作品集。在这里我分享我对捕捉瞬间和通过图像讲述故事的热情。</p>
+					<p><a href="#education" style="color: #1565c0; text-decoration: none; font-weight: 600; font-size: 1.1rem;">查看作品集 →</a></p>
 				</div>
 			</article>
 
 			<article id="education">
 				<div class="container">
-					<h2>Gallery</h2>
+					<h2>作品集</h2>
 					<div class="row">
 						<section class="box">
 							<a href="landscape.html" style="text-decoration: none; color: inherit; display: block;">
-								<h3><strong>Landscape</strong></h3>
-								<p>Nature and scenic photography</p>
+								<h3><strong>风景</strong></h3>
+								<p>自然与风景摄影</p>
 							</a>
 						</section>
 						<section class="box">
-							<h3><strong>Portrait</strong></h3>
-							<p>People and lifestyle photography</p>
+							<h3><strong>人像</strong></h3>
+							<p>人物与生活方式摄影</p>
 						</section>
 						<section class="box">
-							<h3><strong>Street</strong></h3>
-							<p>Urban and candid photography</p>
+							<h3><strong>街拍</strong></h3>
+							<p>城市与抓拍摄影</p>
 						</section>
 					</div>
 				</div>
