--- a/index-zh.html
+++ b/index-zh.html
@@ -3,42 +3,42 @@
     Personal page by Yanchen
 -->
 
-<html>
+<html lang="zh-CN">
 	<head>
-		<title>Yanchen Wang | Portfolio</title>
+		<title>王沿辰 | 个人主页</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Yanchen Wang - Personal Portfolio" />
+		<meta name="description" content="王沿辰 - 个人主页" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body>
 
 		<!-- Floating Buttons -->
 		<div class="floating-buttons">
-			<button class="back-to-top" id="backToTop" aria-label="Back to top">
-				<span>TOP</span>
+			<button class="back-to-top" id="backToTop" aria-label="返回顶部">
+				<span>顶部</span>
 			</button>
 			<div class="lang-switch">
-				<a href="index.html" class="lang-btn active">EN</a>
-				<a href="index-zh.html" class="lang-btn">CN</a>
+				<a href="index.html" class="lang-btn">EN</a>
+				<a href="index-zh.html" class="lang-btn active">CN</a>
 			</div>
 		</div>
 
 		<!--Nav-->
 			<nav id="nav">
 				<ul>
-					<li><a href="#home"><strong>Home</strong></a></li>
-					<li><a href="#education"><strong>Education</strong></a></li>
-					<li><a href="#work"><strong>Work</strong></a></li>
+					<li><a href="#home"><strong>首页</strong></a></li>
+					<li><a href="#education"><strong>教育</strong></a></li>
+					<li><a href="#work"><strong>工作</strong></a></li>
 					<li class="dropdown">
-						<a href="#activity"><strong>Activity</strong></a>
+						<a href="#activity"><strong>活动</strong></a>
 						<ul class="dropdown-menu">
-							<li><a href="activity/photography.html">Photography</a></li>
-							<li><a href="#activity">Travel</a></li>
-							<li><a href="#activity">Food</a></li>
+							<li><a href="activity/photography.html">摄影</a></li>
+							<li><a href="#activity">旅行</a></li>
+							<li><a href="#activity">美食</a></li>
 						</ul>
 					</li>
-					<li><a href="#contact"><strong>Contact</strong></a></li>
+					<li><a href="#contact"><strong>联系</strong></a></li>
 				</ul>
 			</nav>
 
@@ -46,94 +46,94 @@
 			<div class="wrapper style1">
 				<article class="container" id="home">
 					<span class="image profile-thumb" onclick="this.classList.toggle('enlarged')">
-						<img src="assets/images/selfie3d.png" alt="Yanchen Wang">
+						<img src="assets/images/selfie3d.png" alt="王彦晨">
 					</span>
-					<h1>Yanchen Wang</h1>
-					<p>Hi, I am <strong>Yanchen</strong>. Welcome to my personal page!</p>
+					<h1>王沿辰</h1>
+					<p>你好，我是<strong>沿辰</strong>。欢迎来到我的个人主页！</p>
 				</article>
 			</div>
 		
 		<article id="education">
 			<header>
-				<h2>Education</h2>
+				<h2>教育背景</h2>
 			</header>
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<span class="image"><img src="assets/images/education/NU.png" alt="Wuhan University" width="200" height="200"></span>
-						<h3>Undergraduate<br><strong>Wuhan<br>University</strong></h3>
+						<span class="image"><img src="assets/images/education/NU.png" alt="武汉大学" width="200" height="200"></span>
+						<h3>本科<br><strong>武汉大学</strong></h3>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="Shanghai Jiaotong University" width="200" height="200"></span>
-						<h3>Summer School<br><strong>Shanghai Jiaotong University</strong></h3>
+						<span class="image"><img src="assets/images/education/Sjtu-logo-standard-red.png" alt="上海交通大学" width="200" height="200"></span>
+						<h3>暑期学校<br><strong>上海交通大学</strong></h3>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/education/NU.png" alt="Northeastern University" width="200" height="200"></span>
-						<h3>Graduate<br><strong>Northeastern University</strong></h3>
+						<span class="image"><img src="assets/images/education/NU.png" alt="东北大学" width="200" height="200"></span>
+						<h3>研究生<br><strong>东北大学</strong></h3>
 					</section>
 				</div>	
 			</div>
 		</article>
 
 		<article id="work">
-			<h2>Work</h2>
+			<h2>工作经历</h2>
 			<div class="container">
 				<div class="row">
 					<section class="box">
 						<div class="logo-container">
-							<img src="assets/images/work/New_Oriental.png" alt="New Oriental">
+							<img src="assets/images/work/New_Oriental.png" alt="新东方">
 						</div>
-						<h3><strong>New Oriental</strong></h3>
-						<p>English Teacher</p>
+						<h3><strong>新东方</strong></h3>
+						<p>英语教师</p>
 					</section>
 					<section class="box">
 						<div class="logo-container">
 							<img src="assets/images/work/xcerra.png" alt="Xcerra">
 						</div>
 						<h3><strong>Xcerra</strong></h3>
-						<p>Software Engineer</p>
+						<p>软件工程师</p>
 					</section>
 					<section class="box">
 						<div class="logo-container">
-							<img src="assets/images/work/31epF-8N9LL.png" alt="Amazon">
+							<img src="assets/images/work/31epF-8N9LL.png" alt="亚马逊">
 						</div>
-						<h3><strong>Amazon</strong></h3>
-						<p>Software Development Engineer</p>
+						<h3><strong>亚马逊</strong></h3>
+						<p>软件开发工程师</p>
 					</section>
 				</div>
 			</div>
 		</article>
 		
 		<article id="activity">
-			<h2>Activity</h2>
+			<h2>兴趣爱好</h2>
 			<div class="container">
 				<div class="row">
 					<section class="box">
-						<a href="activity/photography.html" style="text-decoration: none; color: inherit; display: block;">
-							<span class="image"><img src="assets/images/activity/camera_1423902.png" alt="Photography" width="100" height="100"></span>
-							<h3><strong>Photography</strong></h3>
+						<a href="activity/photography-zh.html" style="text-decoration: none; color: inherit; display: block;">
+							<span class="image"><img src="assets/images/activity/camera_1423902.png" alt="摄影" width="100" height="100"></span>
+							<h3><strong>摄影</strong></h3>
 						</a>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/activity/map_7997627.png" alt="Travel" width="100" height="100"></span>
-						<h3><strong>Travel</strong></h3>
+						<span class="image"><img src="assets/images/activity/map_7997627.png" alt="旅行" width="100" height="100"></span>
+						<h3><strong>旅行</strong></h3>
 					</section>
 					<section class="box">
-						<span class="image"><img src="assets/images/activity/nabe_5746409.png" alt="Food" width="100" height="100"></span>
-						<h3><strong>Food</strong></h3>
+						<span class="image"><img src="assets/images/activity/nabe_5746409.png" alt="美食" width="100" height="100"></span>
+						<h3><strong>美食</strong></h3>
 					</section>
 				</div>
 			</div>
 		</article>
 
 		<article id="contact">
-			<h2>Contact</h2>
+			<h2>联系方式</h2>
 			<div class="container">
 				<div class="row">
 					<a href="https://www.linkedin.com/in/yancwang" target="_blank" rel="noopener noreferrer" class="contact-link">
 						<section class="contact-box">
 							<img src="assets/images/linkedin.jpg" alt="LinkedIn" class="contact-icon">
-							<h3><strong>LinkedIn</strong></h3>
+							<h3><strong>领英</strong></h3>
 						</section>
 					</a>
 				</div>
