Add contacts link

--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
 							<h3><strong>LinkedIn</strong></h3>
 						</section>
 					</a>
+					<a href="https://www.instagram.com/mrsuperchen24" target="_blank" rel="noopener noreferrer" class="contact-link">
+						<section class="contact-box">
+							<img src="assets/images/Instagram_logo_2022.png" alt="Instagram" class="contact-icon">
+							<h3><strong>Instagram</strong></h3>
+						</section>
+					</a>
 				</div>
 			</div>
 		</article>
