Remove the dropdown list

--- a/activity/photography-zh.html
+++ b/activity/photography-zh.html
@@ -30,14 +30,7 @@
 					<li><a href="../index-zh.html#home"><strong>首页</strong></a></li>
 					<li><a href="../index-zh.html#education"><strong>教育</strong></a></li>
 					<li><a href="../index-zh.html#work"><strong>工作</strong></a></li>
-					<li class="dropdown">
-						<a href="../index-zh.html#activity"><strong>活动</strong></a>
-						<ul class="dropdown-menu">
-							<li><a href="photography-zh.html">摄影</a></li>
-							<li><a href="../index-zh.html#activity">旅行</a></li>
-							<li><a href="../index-zh.html#activity">美食</a></li>
-						</ul>
-					</li>
+					<li><a href="../index-zh.html#activity"><strong>活动</strong></a></li>
 					<li><a href="../index-zh.html#contact"><strong>联系</strong></a></li>
 				</ul>
 			</nav>
