--- a/index.html
+++ b/index.html
@@ -30,14 +30,7 @@
 					<li><a href="#home"><strong>Home</strong></a></li>
 					<li><a href="#education"><strong>Education</strong></a></li>
 					<li><a href="#work"><strong>Work</strong></a></li>
-					<li class="dropdown">
-						<a href="#activity"><strong>Activity</strong></a>
-						<ul class="dropdown-menu">
-							<li><a href="activity/photography.html">Photography</a></li>
-							<li><a href="#activity">Travel</a></li>
-							<li><a href="#activity">Food</a></li>
-						</ul>
-					</li>
+					<li><a href="#activity"><strong>Activity</strong></a></li>
 					<li><a href="#contact"><strong>Contact</strong></a></li>
 				</ul>
 			</nav>
