--- a/activity/photography.html
+++ b/activity/photography.html
@@ -30,14 +30,7 @@
 					<li><a href="../index.html#home"><strong>Home</strong></a></li>
 					<li><a href="../index.html#education"><strong>Education</strong></a></li>
 					<li><a href="../index.html#work"><strong>Work</strong></a></li>
-					<li class="dropdown">
-						<a href="../index.html#activity"><strong>Activity</strong></a>
-						<ul class="dropdown-menu">
-							<li><a href="photography.html">Photography</a></li>
-							<li><a href="../index.html#activity">Travel</a></li>
-							<li><a href="../index.html#activity">Food</a></li>
-						</ul>
-					</li>
+					<li><a href="../index.html#activity"><strong>Activity</strong></a></li>
 					<li><a href="../index.html#contact"><strong>Contact</strong></a></li>
 				</ul>
 			</nav>
