--- a/index-zh.html
+++ b/index-zh.html
@@ -30,14 +30,7 @@
 					<li><a href="#home"><strong>首页</strong></a></li>
 					<li><a href="#education"><strong>教育</strong></a></li>
 					<li><a href="#work"><strong>工作</strong></a></li>
-					<li class="dropdown">
-						<a href="#activity"><strong>活动</strong></a>
-						<ul class="dropdown-menu">
-							<li><a href="activity/photography.html">摄影</a></li>
-							<li><a href="#activity">旅行</a></li>
-							<li><a href="#activity">美食</a></li>
-						</ul>
-					</li>
+					<li><a href="#activity"><strong>活动</strong></a></li>
 					<li><a href="#contact"><strong>联系</strong></a></li>
 				</ul>
 			</nav>
