--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
 							<h3><strong>500px</strong></h3>
 						</section>
 					</a>
+					<a href="https://500px.com.cn/mrchen0724" target="_blank" rel="noopener noreferrer" class="contact-link">
+						<section class="contact-box">
+							<img src="assets/images/500px.png" alt="VCG" class="contact-icon">
+							<h3><strong>Visual China Group</strong></h3>
+						</section>
+					</a>
 				</div>
 			</div>
 		</article>
